<resources>
    <string name="app_name">LoggerDemo</string>
    <string name="log_normal">打印(String, Int, Float)</string>
    <string name="log_intent">打印(Intent)</string>
    <string name="log_bundle">打印(Bundle)</string>
    <string name="log_map">打印(Map)</string>
    <string name="log_Collection">打印(Collection)</string>
    <string name="log_Reference">打印(Reference)</string>
    <string name="log_throwable">打印(Throwable)</string>
    <string name="log_custer_with_string">打印自定义的对象(重写toString)</string>
    <string name="log_custer_no_string">打印自定义的对象(不重写toString)</string>
    <string name="log_custer_parse">打印自定义Parse</string>
    <string name="log_array">打印数组</string>
    <string name="log_format">打印格式化</string>
    <string name="log_switch">Log开关:</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="log_level">Log等级:</string>
    <string name="log_verbose">VERBOSE</string>
    <string name="log_debug">DEBUG</string>
    <string name="log_info">INFO</string>
    <string name="log_warn">WARN</string>
    <string name="log_error">ERROR</string>
    <string name="log_assert">ASSERT</string>
    <string name="log_thread">Log线程名:</string>
    <string name="log_stack">Log堆栈:</string>
</resources>
